Задокументировано API для работы со статусами.
